<resources>
    <string name="app_name">Yaan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_content_Description_1">Logo Image Appearing with background animation</string>
    <string name="logo_content_Description">LOGO Image Floating up</string>


    <!-- Log_in fragment Strings -->

    <string name="Email_textbox">Email</string>
    <string name="password_textbox">Password</string>
    <string name="final_Log_in_btn">Log_in</string>


    <!-- Sign_up fragment Strings -->

    <string name="First_name">First Name</string>
    <string name="Last_name">Last Name</string>
    <string name="final_sign_up_btn">Sign_Up</string>
    <string name="Phone_textbox">Phone</string>
    <string name="set_password_textbox">Set Your Password</string>
    <string name="password_confirmation_textbox">Confirmation</string>
    <string name="set_password_confirmation_textbox">Re_Enter Your Password</string>
    <string name="password_error">Password mismatch !</string>
    <string name="blank_field_error">Field left blank !</string>
    <string name="welcome_new_user_message">Welcome</string>


    <!-- For Navigation Drawer -->
    <!--For Drawer Menu-->
    <string name="navigation_drawer_1">Route Between Stations</string>
    <string name="navigation_drawer_2">Station Info</string>
    <string name="navigation_drawer_3">Metro Map</string>
    <string name="navigation_drawer_4">City Attractions</string>
    <string name="my_account">My Account</string>
    <string name="log_out">Log Out</string>
    <!--For ActionBarDrawerToogle / animation of hamberger icon for navigation drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- For Pager Adapter -->
    <string name="tab1">tab1</string>
    <string name="tab2">tab2</string>
    <string name="tab3">tab3</string>

    <!-- For play_area_bottom_fragment -->
    <!--Explore area-->
    <string name="bottom_fragment_btn1">Know Your Metro</string>
    <string name="bottom_fragment_btn1_console">Your Metro</string>
    <string name="bottom_fragment_btn2">Map</string>
    <string name="bottom_fragment_btn3">City Attractions</string>
    <!--Fare Area-->
    <string name="bottom_fragment_btn4">Quick Recharge</string>
    <string name="bottom_fragment_btn5">App Wallet</string>
    <string name="bottom_fragment_btn6">Smart Card</string>
    <!--info section-->
    <string name="bottom_fragment_btn7">FAQ</string>
    <string name="bottom_fragment_btn8">Help Line</string>
    <string name="bottom_fragment_btn9">FeedBack</string>


    <!--for sessions-->
    <string name="logged_in_message">Logged In</string>
    <string name="log_out_string">Logging Out</string>


    <!--for search_bar_popup_menu-->
    <string name="popup_1">popup_1</string>
    <string name="popup_2">popup_2</string>
    <string name="popup_3">popup_3</string>
    <string name="popup_4">popup_4</string>
    <string name="popup_5">popup_5</string>
    <string name="popup_6">popup_6</string>
    <string name="popup_7">popup_7</string>
    <string name="popup_8">popup_8</string>
    <string name="popup_9">popup_9</string>
    <string name="popup_10">popup_10</string>
    <string name="popup_11">popup_11</string>
    <string name="popup_12">popup_12</string>

    <!-- for Tab_1_middle_fragment_play_area -->
    <string name="tab1_middle_fragment_get_info_btn">Get Info</string>
    <string name="tab1_middle_fragment_view_route">View Route</string>
    <!--for search_bar_tab_1-->
    <string name="search_bar_1">Source</string>
    <string name="search_bar_2">Destination</string>
    <!-- for Tab_2_middle_fragment_play_area -->
    <string name="tab_2_hint">Choose A Station to know more</string>
    <string name="tab2_middle_fragment_get_station_info">Get Station Info</string>
    <!--for search_bar_tab_2-->
    <string name="search_bar_tab_2">Select Station</string>


    <!--For Other Toolbar-->
    <string name="other_toolbar_Back_Button">Back Button</string>

    <!--For Station Info Activity-->
    <string name="station_info">Station Info</string>

    <!--For View Route on Map Activity-->
    <string name="view_route_on_map">View Route</string>

    <!--For Popup_info_activity-->
    <string name="source_Station_not_selected">source Station not selected</string>
    <string name="destination_Station_not_selected">destination Station not selected</string>
    <string name="same_scr_dest">Source and destination are choosen to be same</string>
    <string name="both_unselected">source and destination Station not selected</string>
    <string name="route_detail_error">route_detail_query_results are null</string>
    <string name="route_cost_error">route_cost is null</string>

</resources>
