<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/all_stations"
        >
        <item
            android:id="@+id/popup_1"
            android:title="@string/popup_1"
            />
        <item
            android:id="@+id/popup_2"
            android:title="@string/popup_2"
            />
        <item
            android:id="@+id/popup_3"
            android:title="@string/popup_3"
            />
        <item
            android:id="@+id/popup_4"
            android:title="@string/popup_4"
            />
        <item
            android:id="@+id/popup_5"
            android:title="@string/popup_5"
            />
        <item
            android:id="@+id/popup_6"
            android:title="@string/popup_6"
            />
        <item
            android:id="@+id/popup_7"
            android:title="@string/popup_7"
            />
        <item
            android:id="@+id/popup_8"
            android:title="@string/popup_8"
            />
        <item
            android:id="@+id/popup_9"
            android:title="@string/popup_9"
            />
        <item
            android:id="@+id/popup_10"
            android:title="@string/popup_10"
            />
        <item
            android:id="@+id/popup_11"
            android:title="@string/popup_11"
            />
        <item
            android:id="@+id/popup_12"
            android:title="@string/popup_12"
            />
    </group>

</menu>