<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_drawer_option_0"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="Home"

        />
        <item
            android:id="@+id/navigation_drawer_option_1"
            android:icon="@drawable/ic_rowing_black_24dp"
            android:title="@string/navigation_drawer_1"
            />
        <item
            android:id="@+id/navigation_drawer_option_2"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/navigation_drawer_2"
            />
        <item
            android:id="@+id/navigation_drawer_option_3"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/navigation_drawer_3"
            />
        <item
            android:id="@+id/navigation_drawer_option_4"
            android:icon="@drawable/ic_location_city_black_24dp"
            android:title="@string/navigation_drawer_4"
            />
    </group>
    <item android:title="Other options">
        <menu>
            <item
                android:title="@string/my_account"
                android:id="@+id/other_options_1"
                android:icon="@drawable/ic_account_circle"
                />
            <item
                android:title="@string/log_out"
                android:id="@+id/other_options_2"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                />
        </menu>
    </item>

</menu>