<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/fragment_background"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:isScrollContainer="false"
        android:fillViewport="true"
        android:layout_weight="1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/First_name"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:background="@drawable/custom_text_box_layout"
                android:hint="@string/First_name"
                android:layout_margin="16dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Last_name"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:background="@drawable/custom_text_box_layout"
                android:hint="@string/Last_name"
                android:layout_margin="16dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:text="@string/Email_textbox"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:background="@drawable/custom_text_box_layout"
                android:hint="@string/Email_textbox"
                android:layout_margin="16dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:text="@string/Phone_textbox"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.rilixtech.CountryCodePicker
                    android:id="@+id/country_code_picker"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    app:ccp_defaultNameCode="IN"
                    />
                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:background="@drawable/custom_text_box_layout"
                    android:hint="@string/Phone_textbox"
                    android:layout_margin="16dp"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:text="@string/password_textbox"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@drawable/custom_text_box_layout"
                android:hint="@string/set_password_textbox"
                android:layout_margin="16dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:text="@string/password_confirmation_textbox"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@drawable/custom_text_box_layout"
                android:hint="@string/set_password_confirmation_textbox"
                android:layout_margin="16dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/final_sign_up_btn"
                android:text="@string/final_sign_up_btn"
                android:textSize="16sp"
                android:background="@drawable/custom_button_layout"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>