<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tab_2_middle_fragment"
    android:orientation="vertical"
    android:background="#FFEB3B">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/tab_2_hint"
        android:textSize="25sp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:id="@+id/search_bar_tab_2"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick"

        android:layout_margin="15dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/search_bar_tab_2"
            android:textSize="30sp"
            android:gravity="center"
            android:id="@+id/search_bar_tab_2_text_view"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            />
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/ic_keyboard_arrow_down_black_24dp"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:text="@string/tab2_middle_fragment_get_station_info"
        android:id="@+id/get_station_info_btn"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"/>

</LinearLayout>