<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/fragment_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email_textbox"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/Email_textbox"
            android:background="@drawable/custom_text_box_layout"
            android:layout_margin="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_textbox"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            >

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_textbox"
                android:background="@drawable/custom_text_box_layout"
                android:layout_margin="16dp"
                />


        </android.support.design.widget.TextInputLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/final_log_in_btn"
            android:text="@string/final_Log_in_btn"
            android:textSize="16sp"
            android:background="@drawable/custom_button_layout"
            android:drawableLeft="@drawable/baseline_play_for_work_black_18dp"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>