<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tab_1_middle_fragment"
    android:orientation="vertical"
    android:background="#009688">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:id="@+id/search_bar_1"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick"

        android:layout_margin="15dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/search_bar_1"
            android:textSize="30sp"
            android:gravity="center|start"
            android:id="@+id/search_bar_1_text_view"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:paddingStart="16dp"
            android:paddingEnd="2dp"
            />
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/ic_keyboard_arrow_down_black_24dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:id="@+id/search_bar_2"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick"

        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="13dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/search_bar_2"
            android:textSize="30sp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:gravity="center|start"
            android:id="@+id/search_bar_2_text_view"
            android:paddingStart="16dp"
            android:paddingEnd="2dp"
            />
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/ic_keyboard_arrow_down_black_24dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/tab1_middle_fragment_get_info_btn"
            android:id="@+id/get_info_btn"
            android:layout_marginStart="15dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/tab1_middle_fragment_view_route"
            android:id="@+id/view_route_btn"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="15dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

    </LinearLayout>

</LinearLayout>