<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".help_line_activity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/help_line_toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="4dp"
        android:background="@color/other_toolbar_color"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/ic_keyboard_backspace_black_24dp"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/other_toolbar_Back_Button"
                android:onClick="onClick"
                android:id="@+id/back_btn_help_line"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:text="@string/bottom_fragment_btn8"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:gravity="center"
                android:textSize="30sp"
                />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/Email_textbox"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:paddingStart="15dp"
        android:layout_marginTop="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="123@xyz.com"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:paddingStart="15dp"
        android:layout_marginTop="15dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="Contacts"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:paddingStart="15dp"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="0522-123456"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textSize="30sp"
            android:gravity="center"/>
        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_call_black_24dp"
            android:id="@+id/help_line_contact_1_call_btn"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="0123456789"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textSize="30sp"
            android:gravity="center"/>
        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_call_black_24dp"
            android:id="@+id/help_line_contact_2_call_btn"/>
    </LinearLayout>

</LinearLayout>